@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.springframework.validation.Errors;
 
 public abstract class CloudPlatformWrapper {
@@ -40,13 +39,10 @@ public abstract class CloudPlatformWrapper {
     if (cloudPlatform == null) {
       cloudPlatform = DEFAULT;
     }
-    switch (cloudPlatform) {
-      case AZURE:
-        return AzurePlatform.INSTANCE;
-      case GCP:
-      default:
-        return GcpPlatform.INSTANCE;
-    }
+    return switch (cloudPlatform) {
+      case AZURE -> AzurePlatform.INSTANCE;
+      case GCP -> GcpPlatform.INSTANCE;
+    };
   }
 
   public boolean isGcp() {
@@ -62,6 +58,8 @@ public abstract class CloudPlatformWrapper {
   }
 
   public abstract <T> T choose(Supplier<T> gcp, Supplier<T> azure);
+
+  public abstract <T> T choose(T gcp, T azure);
 
   public abstract void ensureValidRegion(String region, Errors errors);
 
@@ -103,6 +101,11 @@ public abstract class CloudPlatformWrapper {
     }
 
     @Override
+    public <T> T choose(T gcp, T azure) {
+      return gcp;
+    }
+
+    @Override
     public void ensureValidRegion(String region, Errors errors) {
       ensureValidRegion(CloudPlatform.GCP, region, GoogleRegion.SUPPORTED_REGIONS, errors);
     }
@@ -114,20 +117,15 @@ public abstract class CloudPlatformWrapper {
       return Arrays.stream(GoogleCloudResource.values())
           .map(
               resource -> {
-                final GoogleRegion finalRegion;
-                switch (resource) {
-                  case FIRESTORE:
-                    finalRegion = region.getRegionOrFallbackFirestoreRegion();
-                    break;
-                  case BUCKET:
-                    finalRegion = region.getRegionOrFallbackBucketRegion();
-                    break;
-                  default:
-                    finalRegion = region;
-                }
+                final GoogleRegion finalRegion =
+                    switch (resource) {
+                      case FIRESTORE -> region.getRegionOrFallbackFirestoreRegion();
+                      case BUCKET -> region.getRegionOrFallbackBucketRegion();
+                      case BIGQUERY -> region;
+                    };
                 return new GoogleStorageResource(null, resource, finalRegion);
               })
-          .collect(Collectors.toList());
+          .toList();
     }
   }
 
@@ -150,6 +148,11 @@ public abstract class CloudPlatformWrapper {
     }
 
     @Override
+    public <T> T choose(T gcp, T azure) {
+      return azure;
+    }
+
+    @Override
     public void ensureValidRegion(String region, Errors errors) {
       ensureValidRegion(CloudPlatform.AZURE, region, AzureRegion.SUPPORTED_REGIONS, errors);
     }
@@ -160,7 +163,7 @@ public abstract class CloudPlatformWrapper {
       final AzureRegion region = AzureRegion.fromValueWithDefault(datasetRequest.getRegion());
       return Arrays.stream(AzureCloudResource.values())
           .map(resource -> new AzureStorageResource(null, resource, region))
-          .collect(Collectors.toList());
+          .toList();
     }
   }
 }
